--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "start": "webpack serve --config webpack.dev.js --open", 
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -19,28 +19,27 @@
   },
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "clean-webpack-plugin": "^4.0.0", 
+    "css-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.0.0",
+    "mini-css-extract-plugin": "^2.5.0",
+    "sass": "^1.49.0", 
+    "sass-loader": "^12.0.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.65.0", 
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.4.0", 
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.1",
+    "bootstrap": "^5.1.0", 
+    "jquery": "^3.6.0",
+    "@popperjs/core": "^2.11.6", 
     "tilt.js": "^1.2.1"
   },
   "engines": {
-  "node": "16.x"
-}
+    "node": "16.x"
+  }
 }
