--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --open", 
+    "start": "webpack serve --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -19,24 +19,30 @@
   },
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0", 
-    "css-loader": "^6.0.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^10.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.0.0",
     "mini-css-extract-plugin": "^2.5.0",
-    "sass": "^1.49.0", 
-    "sass-loader": "^12.0.0",
-    "style-loader": "^3.3.0",
-    "webpack": "^5.65.0", 
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.4.0", 
-    "webpack-merge": "^5.8.0"
+    "sass": "^1.86.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.0", 
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
-    "@popperjs/core": "^2.11.6", 
+    "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
   },
   "engines": {
