--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
   },
